--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "1.5.0",
+    "moment-timezone": "0.5.43",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "6.0.7"
