--- a/.env_example
+++ b/.env_example
@@ -1,2 +1,4 @@
-VITE_API_BASE_URL=http://api.openweathermap.org/data/2.5/weather
-VITE_API_KEY=&APPID=
+VITE_API_INIT_URL=/weather?q=brasilia&units=Metric
+VITE_API_BASE_URL=http://api.openweathermap.org/data/2.5
+VITE_API_UNSPLASH=https://source.unsplash.com/1600x900/?
+VITE_API_KEY=
