updated - changed url of the env variable VITE_API_UNSPLASH

--- a/.env_example
+++ b/.env_example
@@ -1,4 +1,4 @@
 VITE_API_INIT_URL=/weather?q=brasilia&units=Metric
 VITE_API_BASE_URL=http://api.openweathermap.org/data/2.5
-VITE_API_UNSPLASH=https://source.unsplash.com/1600x900/?
+VITE_API_UNSPLASH=https://source.unsplash.com
 VITE_API_KEY=
